# curve-voting-lib

./: .gitignore  INSTALL.md  README.md  example_notebook_usage.py  pyproject.toml  setup.py  test_basic.py
scripts/: ramp_a.py
scripts/gauges/: add_gauge.py  kill_gauge.py
scripts/lending/: set_amm_admin_fee.py  set_amm_fee.py  set_borrowing_discounts.py  set_callback.py  set_monetary_policy.py  set_semilogmp_rates.py
scripts/stableswap-ng/: add_base_pool.py  ramp_A.py  set_implementation.py  set_ma_exp_time.py  set_new_fee.py
scripts/twocrypto-ng/: apply_new_parameters.py  ramp_A_gamma.py  set_implementation.py  stop_ramp_A_gamma.py
src/: __init__.py
src/core/: config.py  create_vote.py  results.py  simulation.py  validation.py  vote.py
src/templates/: base.py  gauge.py  ramp_a.py
src/utils/: constants.py  evm_script.py  vote_utils.py
src/utils/abis/: voting.json
tests/: conftest.py  test_add_gauge.py  test_kill_gauge.py  test_xvote.py
tests/core/: test_xvote.py
tests/shared/forked/: settings.py
voting/: __init__.py  abi.py  config.py  constants.py  context.py  create_vote.py  live_env.py  xgov.py
voting/templates/: base.py  gauge.py
voting/xgov/: broadcasters.py  chains.py
